[gd_scene load_steps=3 format=3 uid="uid://enhtq5jmy8aj"]

[ext_resource type="Script" path="res://Game/All/MiniGame.gd" id="1_7kf7j"]
[ext_resource type="Script" path="res://Game/All/CheckButtons.gd" id="2_kj4ul"]

[node name="Node2D" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_7kf7j")

[node name="CheckButton1" type="CheckButton" parent="Node2D"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 27.0
offset_right = 81.0
offset_bottom = 51.0
script = ExtResource("2_kj4ul")

[node name="Off" type="RichTextLabel" parent="Node2D/CheckButton1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = -16.444
offset_top = -14.0
offset_right = 16.556
offset_bottom = 9.0
text = "Off"

[node name="On" type="RichTextLabel" parent="Node2D/CheckButton1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = 48.556
offset_top = -14.0
offset_right = 81.556
offset_bottom = 9.0
text = "On"

[node name="CheckButton2" type="CheckButton" parent="Node2D"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 45.0
offset_right = 81.0
offset_bottom = 69.0
script = ExtResource("2_kj4ul")

[node name="Off2" type="RichTextLabel" parent="Node2D/CheckButton2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = -16.444
offset_top = -13.0
offset_right = 16.556
offset_bottom = 10.0
text = "Off"

[node name="On" type="RichTextLabel" parent="Node2D/CheckButton2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = 48.556
offset_top = -14.0
offset_right = 81.556
offset_bottom = 9.0
text = "On"

[node name="CheckButton3" type="CheckButton" parent="Node2D"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 63.0
offset_right = 81.0
offset_bottom = 87.0
script = ExtResource("2_kj4ul")

[node name="Off3" type="RichTextLabel" parent="Node2D/CheckButton3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = -16.444
offset_top = -13.0
offset_right = 16.556
offset_bottom = 10.0
text = "Off"

[node name="On" type="RichTextLabel" parent="Node2D/CheckButton3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = 48.556
offset_top = -13.0
offset_right = 81.556
offset_bottom = 10.0
text = "On"

[node name="CheckButton4" type="CheckButton" parent="Node2D"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 81.0
offset_right = 81.0
offset_bottom = 105.0
script = ExtResource("2_kj4ul")

[node name="Off4" type="RichTextLabel" parent="Node2D/CheckButton4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = -16.444
offset_top = -13.0
offset_right = 16.556
offset_bottom = 10.0
text = "Off"

[node name="On" type="RichTextLabel" parent="Node2D/CheckButton4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = 48.556
offset_top = -13.0
offset_right = 81.556
offset_bottom = 10.0
text = "On"

[node name="CheckButton5" type="CheckButton" parent="Node2D"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 98.0
offset_right = 81.0
offset_bottom = 122.0
script = ExtResource("2_kj4ul")

[node name="Off5" type="RichTextLabel" parent="Node2D/CheckButton5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = -16.444
offset_top = -13.0
offset_right = 16.556
offset_bottom = 10.0
text = "Off"

[node name="On" type="RichTextLabel" parent="Node2D/CheckButton5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.149
anchor_top = 0.5
anchor_right = -0.149
anchor_bottom = 0.5
offset_left = 48.556
offset_top = -13.0
offset_right = 81.556
offset_bottom = 10.0
text = "On"
